  * Balloon size restricted to not expand over timeline border
  * Help documentation updated
  * Adjustments made to be able to use wxpython version 2.9
  * Replaced WxTimeType and PyTimeType with GregorianTimeType

Bug fixes:

  * Fixed exception when right-clicking in CatergoriesEditor
  * When 'ends today' start time can't be > now, anymore

Removed features:

  * Printing: Use export to image and print image instead
  * Old timeline file format: Last used in version 0.9.0

Timeline 0.21.1, released on 7 July 2013
========================================

Bug fixes:

  * Bug fix. Exception when exporting image

Timeline 0.21.0, released on 30 June 2013
==========================================

New features, enhancements:

  * Added feature, Set category on selected events
  * Added feature, Set category on events without category
  * Added 'Import' feature that makes it possible to merge timelines.
  * Added 'Edit Event' menu

Bug fixes:

  * Bug fix. Allow Preferences setting when no timeline exists
  * Bug fix. Reset selected events list when selected events are deleted

Timeline 0.20.0, released on 30 March 2013
==========================================

New features, enhancements:

  * Added 'Save As' feature
  * Strategy for allowing multiple users to use the same Timeline file.
  * The timeline view regains focus when the event editor is closed.
  * Enter-key works in date and time fields of the event editor
  * Some help texts updated
  * New version of icalender to cope with years before 1900
  * TimelineComponent can explicitly clear the drawing area

Bug fixes:

  * Fixed problem with Event texts starting with '('- or '['-character
  * Delete event by context menu now works

Timeline 0.19.0, released on 30 December 2012
=============================================

New features, enhancements:

  * Possibility to define URL on events and execute "Goto URL" to open web browser.
  * Implemented 'fit week' navigation function.